# plant-disease-edge-ai-diagnosis-system

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
mobile/: analysis_options.yaml  pubspec.yaml
mobile/android/app/src/debug/: AndroidManifest.xml
mobile/android/app/src/main/res/drawable/: launch_background.xml
mobile/android/app/src/main/res/drawable-v21/: launch_background.xml
mobile/android/app/src/main/res/values/: styles.xml
mobile/android/app/src/main/res/values-night/: styles.xml
mobile/android/app/src/profile/: AndroidManifest.xml
mobile/ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
mobile/ios/RunnerTests/: RunnerTests.swift
mobile/lib/: main.dart
mobile/lib/config/: routes.dart  theme.dart
mobile/lib/core/constants/: app_assets.dart  app_colors.dart  app_dimensions.dart  layout_constants.dart
mobile/lib/core/di/: service_locator.dart
mobile/lib/core/errors/: app_exceptions.dart  error_handler.dart
mobile/lib/core/utils/: disease_label_mapper.dart
mobile/lib/core/widgets/: circular_back_button.dart  circular_icon_button.dart
mobile/lib/data/data_sources/: library_data_source.dart
mobile/lib/data/models/: disease_detail_model.dart  disease_model.dart  history_filter_model.dart  scan_history_model.dart
mobile/lib/data/repositories/: disease_repository.dart  history_repository.dart
mobile/lib/features/diagnosis/controllers/: diagnosis_controller.dart
mobile/lib/features/diagnosis/screens/: diagnosis_screen.dart
mobile/lib/features/diagnosis/widgets/: message_bubble.dart  triangle_painter.dart
mobile/lib/features/history/controllers/: history_controller.dart
mobile/lib/features/history/screens/: history_screen.dart
mobile/lib/features/history/widgets/: history_filter_sheet.dart  history_item_tile.dart
mobile/lib/features/main/screens/: main_wrapper_screen.dart
mobile/lib/features/main/widgets/: bottom_nav_bar.dart
mobile/lib/features/settings/controllers/: settings_controller.dart
mobile/lib/features/settings/screens/: settings_screen.dart
mobile/lib/features/splash/screens/: splash_screen.dart
mobile/lib/services/ai/: classifier_service.dart
mobile/lib/services/media/: media_service.dart
mobile/lib/services/storage/: preferences_service.dart
mobile/test/: widget_test.dart
mobile/test/data/: models_test.dart
src/analysis/: evaluator.py
src/core/: paths.py
